@@ -15,11 +15,10 @@
  ******************************************************************************/
 package com.wso2telco.cryptosystem;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
+
+import org.apache.commons.codec.binary.Base64;
 
 import com.wso2telco.FileUtil;
 
@@ -27,21 +26,26 @@ import java.nio.charset.Charset;
 import java.security.Key;
 
 // TODO: Auto-generated Javadoc
+ 
 /**
  * The Class AESencrp.
  */
 public class AESencrp {
 
+     
     /** The Constant ALGO. */
     private static final String ALGO = "AES";
     
+     
     /** The key. */
     private static String key= FileUtil.getApplicationProperty("aeskey");
     
+     
     /** The Constant keyValue. */
     private static final byte[] keyValue = key.getBytes(Charset.forName("UTF-8"));
 
 
+     
     /**
      * Encrypt.
      *
@@ -54,10 +58,12 @@ public class AESencrp {
         Cipher c = Cipher.getInstance(ALGO);
         c.init(Cipher.ENCRYPT_MODE, key);
         byte[] encVal = c.doFinal(Data.getBytes());
-        String encryptedValue = new BASE64Encoder().encode(encVal);
+        //String encryptedValue = Base64.encodeBase64String(encVal);
+        String encryptedValue = new String(Base64.encodeBase64(encVal));
         return encryptedValue;
     }
 
+     
     /**
      * Decrypt.
      *
@@ -69,12 +75,13 @@ public class AESencrp {
         Key key = generateKey();
         Cipher c = Cipher.getInstance(ALGO);
         c.init(Cipher.DECRYPT_MODE, key);
-        byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedData);
+        byte[] decordedValue = Base64.decodeBase64(encryptedData.getBytes());
         byte[] decValue = c.doFinal(decordedValue);
         String decryptedValue = new String(decValue);
         return decryptedValue;
     }
     
+     
     /**
      * Generate key.
      *
